# inspekt3d

./: CONTRIBUTORS  INSTALL  Makefile.am  README.md  bootstrap  compile-env.in  configure.ac  git_clean_all
examples/: rocking-horse.scm  sphere.scm  turtle.scm
inspekt3d/: camera.scm  gl-missing.scm  library.scm  shader.scm  viewer.scm
